[package]
name = "burnt_toast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
bincode = "1.3.3"
# Should we roll our own error printer?
# miette = "3.2.0"
owo-colors = { version = "3.1.0", features = ["supports-colors"] }
thiserror = "1.0"
paste = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
lalrpop-util = "0.19.6"
