[package]
name = "burnt_toast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
bincode = "1.3.3"
im-rc = { version = "15.0.0", features = ["serde"] }
owo-colors = { version = "3.1.0", features = ["supports-colors"] }
textwrap = { version = "0.14.2", features = ["terminal_size"] }
thiserror = "1.0"
paste = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
lalrpop-util = "0.19.6"
