[package]
name = "burnt_toast"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["integration_test"]

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
bincode = "1.3.3"
im-rc = { version = "15.0.0", features = ["serde"] }
lalrpop-util = "0.19.6"
owo-colors = { version = "3.1.0", features = ["supports-colors"] }
paste = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
textwrap = { version = "0.14.2", features = ["terminal_size"] }
thiserror = "1.0"
which = "4.2.2"
